<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="password">كلمة المرور</string>
    <string name="app_name">app_name</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="login">تسجيل دخول</string>
    <string name="hello_blank_fragment">هلا</string>
    <string name="sigup">إنشاء حساب</string>
    <string name="forgot_your_password">نسيت كلمة السر</string>
    <string name="ts">تذكرني</string>
    <string name="name">الاسم</string>
    <string name="hello">مرحبا,👋</string>
    <string name="confirm_password">تأكيد كلمة المرور</string>
    <string name="Do_you_already_have_an_account">هل لديك حساب بالفعل ؟</string>
    <string name="doneQtp">تم إرسال رمز التحقق علي بريدك الالكتروني</string>
    <string name="noOtp">لم تتلق رمز التحقق.</string>
    <string name="re_transmitter">إعادة الإرسال</string>
    <string name="congratulations">تهانينا !</string>
    <string name="Password_Reset">إعادة تعيين كلمة المرور</string>
    <string name="title_resest_screen">الرجاء إدخال الرمز الذي أرسلناه إلى بريدك الإلكتروني ****22@gmail.com لإعادة تعيين كلمة المرور الجديدة</string>
    <string name="Your_account_has_been_registered_successfully">لقد تم تسجيل حسابك بنجاح</string>
    <string name="enter_password">أدخل كلمة المرور الجديدة</string>
    <string name="verify_your_identity">تحقق من هويتك</string>
    <string name="Enter_the_new_password">أدخل كلمة المرور الجديدة</string>
    <string name="dont_have_an_account">ليس لديك حساب ؟</string>
    <string name="agean">إعادة تعيين كلمة المرور</string>
    <string name="search">بحث…</string>
    <string name="todo">TODO</string>
    <string name="Best_selling_books">الكتب الاكثر مبيعا</string>
    <string name="More">المزيد</string>
    <string name="home">الرئيسية</string>
    <string name="category">أقسام الكتب</string>
    <string name="author">المؤلفون</string>
    <string name="archives">المحفوظات</string>
    <string name="card">عربة التسوق</string>
    <string name="prince_book">160 جنية</string>
    <string name="enter_name">أدخل الاسم</string>
    <string name="loadind">Loadind....</string>
    <string name="ok">OK</string>
    <string name="retry">retry</string>
    <string name="shoppingBasket">سلة المشتريات</string>
    <string name="promo_code">الرمز الترويجي</string>
    <string name="Subtotal">المجموع الفرعي</string>
    <string name="use_discount">استعمال الخصم</string>
    <string name="subtotal">لمجموع الفرعي</string>
    <string name="pirce">100</string>
    <string name="total_summation">المجموع الكلي</string>
    <string name="Delivery">التوصيل</string>
    <string name="comment">اضافة تعليق او ملاحظة</string>
    <string name="Move_to_pay">الانتقال للدفع</string>
    <string name="textview">TextView</string>
    <string name="Payment_and_shipping">الدفع والشحن</string>
    <string name="firstName">الاسم الاول</string>
    <string name="lastName">الاسم الاخير</string>
    <string name="phone">رقم الهاتف</string>
    <string name="city">المدينة</string>
    <string name="Governorate">المحافظة</string>
    <string name="Country">الدولة</string>
    <string name="download_complete">Download Complete</string>
    <string name="Favorite_books">الكتب المفضلة</string>
    <string name="Download_books">الكتب المُحملة</string>
    <string name="Publish_a_book">نشر كتاب</string>
    <string name="Connect_with_us">تواصل معنا</string>
    <string name="who_are_we">من نحن</string>
    <string name="settings">الإعدادات</string>
    <string name="Favorite">المفضلة</string>
    <string name="NoProductsHaveBeenAddedToTheFavoritesList">لم يتم إضافة منتجات الى قائمة المفضلة</string>
    <string name="publishBook">نشر كتاب</string>
    <string name="Category">التصنيف</string>
    <string name="numberOfPages">عدد الصفحات</string>
    <string name="name_author">اسم الكاتب</string>
</resources>